# lightning_ros

./: CMakeLists.txt  LICENSE  LightningSetup.txt  README.md  README.txt  mainpage.dox  manifest.xml  package.xml  setup.py
action/: PFS.action  RR.action
config/: moveit.rviz  ompl_planning.yaml  right_left_arm_groups.yaml  rviz_config.vcg
include/lightning/: collision_checker.h  collision_utils.h
include/lightning/planner_stoppable/: ompl_ros_stoppable.h  ompl_ros_stoppable.h.old  ompl_ros_stoppable_joint_planner.h  ompl_ros_stoppable_joint_planner.h.old  ompl_ros_stoppable_planning_group.h  ompl_ros_stoppable_planning_group.h.old  planner_stoppable.h  simple_setup_stoppable.h
launch/: box_test.launch  lightning.launch  planners.launch  rviz_display.launch  simple_test.launch  table_test.launch  test_common.launch
msg/: DrawPoints.msg  Float64Array.msg  Float64Array2D.msg  IntArray.msg  IntArray2D.msg  PFSAction.msg  PFSActionFeedback.msg  PFSActionGoal.msg  PFSActionResult.msg  PFSGoal.msg  PFSResult.msg  RRAction.msg  RRActionFeedback.msg  RRActionGoal.msg  RRActionResult.msg  RRGoal.msg  RRResult.msg  RRStats.msg  Stats.msg  Status.msg  StopPlanning.msg
scripts/: PFS_action_server.py  RR_action_server.py  run_lightning.py
scripts/pathlib/: PathLibrary.py
scripts/tests/: BoxAdder.py  LightningTest.py  ManageLibraryTests.py  PointDrawer.py  QuickTest.py
scripts/tools/: .PathTools.py.swp  PathTools.py
src/: PFS_action_server.py  RR_action_server.py  lightning.py
src/pathlib/: PathLibrary.py
src/planner_stoppable/: ompl_ros_stoppable.cpp  ompl_ros_stoppable.cpp.old  ompl_ros_stoppable_joint_planner.cpp  ompl_ros_stoppable_planning_group.cpp  ompl_ros_stoppable_planning_group.cpp.old  planner_stoppable.cpp  planner_stoppable_main.cpp  simple_setup_stoppable.cpp
src/tests/: BoxAdder.py  LightningTest.py  ManageLibraryTests.py  PointDrawer.py
src/tools/: PathTools.py  collision_check_service.cpp  collision_checker.cpp  collision_utils.cpp  path_shortcutter.cpp
srv/: CollisionCheck.srv  ManagePathLibrary.srv  PathShortcut.srv
worlds/: empty.world
